--- a/index.css
+++ b/index.css
@@ -1,14 +1,37 @@
+*{
+    font-family: 'Style Script', cursive;
+}
+
 body {
     background: #222222;
+    text-align: center;
+}
+
+button{
+    background: #222222;
+    color: #fff;
+    border: none;
+    border-top: 1px dotted #fff;
+    border-bottom: 1px dotted #fff;
+    outline: none;
+    margin-top: 50px;
+    cursor: pointer;
+    font-size: 1.8rem;
+    padding: 0.5rem 1rem;
+    /* box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2); */
+}
+
+button:hover{
+    color: gold;
 }
 
 .cake {
     position: relative;
-    top: 300px;
+    top: 180px;
     margin: auto;
     width: 200px;
     height: 60px;
-    background: #fff1c7;
+    background: #7b5d4b;
     border-radius: 100%;
 
     box-shadow: 0px 4px 0px #fff1c7, 0px 8px 0px #fff1c7, 0px 12px 0px #fff1c7,
@@ -37,7 +60,7 @@ body {
     position: relative;
     height: 50px;
     width: 12px;
-    top: 315px;
+    top: 200px;
     margin: auto;
     background-color: #fff;
     border-radius: 4px;
@@ -148,3 +171,9 @@ body {
     /* Delay the animation for the third smoke bubble */
   }
   
+
+  .text{
+    margin-top: 350px;
+    color: #fff;
+    font-size: 3.5rem;
+  }
