--- a/card.css
+++ b/card.css
@@ -115,5 +115,15 @@ background-position: center;
     margin-left: -3.5rem;
     color: white;
     font-size: 1.5rem;
-    /* border: 1px solid white; */
+	text-decoration: none;
+	border-top: 1px dotted white;
+    border-bottom: 1px dotted white;
+    padding: 0.5rem;
+}
+
+
+.link:hover{
+    color: gold;
+    border-top: 1px dotted gold;
+    border-bottom: 1px dotted gold;
 }
